--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# Created by https://www.toptal.com/developers/gitignore/api/godot
-# Edit at https://www.toptal.com/developers/gitignore?templates=godot
+# https://github.com/github/gitignore/blob/main/Godot.gitignore
 
-### Godot ###
+# Godot 4+ specific ignores
+.godot/
+
 # Godot-specific ignores
 .import/
 export.cfg
@@ -13,5 +14,4 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
-
-# End of https://www.toptal.com/developers/gitignore/api/godot
+mono_crash.*.json
