Cleanup UI scaling and paddle physics/collission

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://ui/background.jpg")
+dock_filesystem_selected_paths=PackedStringArray("res://ball/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://StartMenu.tscn", "res://Game.tscn", "res://paddle/PaddlePlayer.tscn", "res://paddle/PaddleAI.tscn", "res://ball/Ball.tscn")
-current_scene="res://StartMenu.tscn"
+current_scene="res://Game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -40,7 +40,7 @@ open_scripts=["res://ball/Ball.gd", "res://Game.gd", "res://paddle/PaddleAI.gd",
 open_help=[]
 script_split_offset=70
 list_split_offset=0
-selected_script="res://ui/StartMenu.gd"
+selected_script="res://Game.gd"
 
 [ShaderEditor]
 
